--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/router": "3.0.0",
-    "@angular/upgrade": "2.0.0",
+    "@angular/common": "~2.1.1",
+    "@angular/compiler": "~2.1.1",
+    "@angular/core": "~2.1.1",
+    "@angular/forms": "~2.1.1",
+    "@angular/http": "~2.1.1",
+    "@angular/platform-browser": "~2.1.1",
+    "@angular/platform-browser-dynamic": "~2.1.1",
+    "@angular/router": "~3.1.1",
+    "@angular/upgrade": "~2.1.1",
     "core-js": "^2.4.1",
-    "reflect-metadata": "^0.1.3",
+    "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
-    "systemjs": "0.19.27",
-    "zone.js": "^0.6.23",
-    "angular2-in-memory-web-api": "0.0.20",
-    "bootstrap": "^3.3.6"
+    "systemjs": "0.19.39",
+    "zone.js": "^0.6.25",
+    "angular-in-memory-web-api": "~0.1.13",
+    "bootstrap": "^3.3.7"
   },
   "devDependencies": {
     "concurrently": "^2.2.0",
@@ -37,8 +37,6 @@
     "gulp-shell": "^0.5.2",
     "lite-server": "^2.2.2",
     "run-sequence": "^1.2.2",
-    "systemjs-builder": "^0.15.31",
-    "typescript": "^2.0.2",
-    "typings": "^1.3.2"
+    "systemjs-builder": "^0.15.31"
   }
 }
