--- a/bs-config.json
+++ b/bs-config.json
@@ -5,7 +5,8 @@
   	"baseDir": "./dev/client",
   	"routes": {
   		"/": "./",
-  		"/app": "dev/client"
+  		"/app": "dev/client",
+  		"/assets": "public/dist/assets"
   	}
   }
 }
