--- a/package.json
+++ b/package.json
@@ -30,12 +30,24 @@
     "bootstrap": "^3.3.7"
   },
   "devDependencies": {
+    "autoprefixer": "^6.5.0",
     "concurrently": "^2.2.0",
+    "cssnano": "^3.7.6",
+    "event-stream": "^3.3.4",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-ext-replace": "^0.3.0",
     "gulp-html-replace": "^1.6.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-postcss": "^6.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-shell": "^0.5.2",
+    "gulp-sourcemaps": "^1.6.0",
     "lite-server": "^2.2.2",
+    "postcss": "^5.2.4",
+    "postcss-scss": "^0.3.1",
+    "precss": "^1.4.0",
     "run-sequence": "^1.2.2",
     "systemjs-builder": "^0.15.31"
   }
